# examples

./: .gitignore  12.bundle.js  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  README.md  asset-manifest.json  bundle.js  bundle.js.LICENSE.txt  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: gh-pages.yml  pages.yml
benchmarking-cli/: Cargo.toml  README.md
benchmarking-cli/src/: main.rs  utils_input.rs  utils_program.rs
examples/: advice_provider.inputs  advice_provider.masm  aliquot-sum.inputs  aliquot-sum.masm  bsearch.inputs  bsearch.masm  bubble_sort.inputs  bubble_sort.masm  catalan.inputs  catalan.masm  collatz.inputs  collatz.masm  comparison.inputs  comparison.masm  conditional.inputs  conditional.masm  dft.inputs  dft.masm  fibonacci.inputs  fibonacci.masm  game-of-life-4x4.inputs  game-of-life-4x4.masm  game_of_life_4x4.inputs  game_of_life_4x4.masm  greatest_common_divisor.inputs  greatest_common_divisor.masm  matrix_multiplication.inputs  matrix_multiplication.masm  merkle_inclusion.inputs  merkle_inclusion.masm  nprime.inputs  nprime.masm  proof_of_location.inputs  proof_of_location.masm  provable_compliance.inputs  provable_compliance.masm  quicksort.inputs  quicksort.masm  recursive_verification.inputs  shamir-secret-share.inputs  (+5 more)
miden-wasm/: Cargo.toml
miden-wasm/src/: lib.rs
playground/: .eslintrc.cjs  .gitignore  .hintrc  .pre-commit-config.yaml  .pre-commit-config.yaml.yaml  .prettierignore  babel.config.js  global.d.ts  jest.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
playground/__tests__/: Components.test.tsx  Utils.test.tsx
playground/miden-wasm/: .gitignore  Cargo.toml
playground/miden-wasm/src/: backend.rs  expected_test_proof.rs  lib.rs  transaction.rs  types.rs  utils_debug.rs  utils_input.rs  utils_program.rs  wasm.rs
playground/playground/: .eslintrc.cjs  .gitignore  .hintrc  .pre-commit-config.yaml  .prettierignore  babel.config.js  global.d.ts  jest.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
playground/playground/__tests__/: Components.test.tsx  Utils.test.tsx
playground/playground/miden-wasm/: .gitignore  Cargo.toml
playground/playground/public/: index.html  manifest.json
playground/playground/src/: App.tsx  Router.tsx  index.tsx  markdown.d.ts
playground/public/: index.html
playground/src/: App.tsx  AppRouter.tsx  Router.tsx  global.d.ts  index.css  index.tsx
playground/src/Layouts/: MainLayout.tsx
playground/src/components/: ActionButton.tsx  ConfigWindow.tsx  DebugButtons.tsx  Dialog.tsx  DropDown.tsx  Header.tsx  InstructionTable.tsx  Link.tsx  MidenLogo.tsx  Modal.tsx  Nav.tsx  NavBar.tsx  NavButton.tsx  NavigationTabs.tsx  OnboardingDialog.tsx  OverlayButton.tsx  Panel.tsx  Popover.tsx  PopoverManager.tsx  QuestionMark.tsx  ShieldButton.tsx  StorageDialog.tsx  Widget.tsx  WidgetPile.tsx
playground/src/contexts/: ConfigProvider.tsx  FileManagerProvider.tsx  PlaygroundProvider.tsx  SettingsProvider.tsx  StorageProvider.tsx  ThemeProvider.tsx
playground/src/data/: defaultLocalStorage.json  defaultSettings.json  defaultStorage.json  index.js  instructions.tsx  package-lock.json  package.json  popovers.json
playground/src/hooks/: useDebugger.tsx  useFileManager.tsx  usePlayground.ts  useSettings.ts  useStorage.ts  useTheme.ts  useWidgetPiles.ts  useWidgets.ts
playground/src/layouts/: MainLayout.tsx
playground/src/markdown/: Explainer.md
playground/src/pages/: CodingEnvironment.tsx  CodingEnvironment.tsx.old  DebugInfo.tsx  Explainer.tsx  InfoSectionLayout.tsx  InstructionTable.tsx  OutputInfo.tsx  Playground.tsx  ProgramInfo.tsx  ProofInfo.tsx  TxProof.tsx  proveWorker.js
playground/src/styles/: config.scss  defaults.scss  functions.scss  global.scss  styles.scss  variables.scss
playground/src/types/: File.d.ts  FileManager.d.ts  FileManagerOpen.d.ts  Filter.d.ts  IconMemeType.d.ts  PlaygroundContextType.d.ts  Settings.d.ts  SettingsContextType.d.ts  SettingsWidget.d.ts  Storage.d.ts  StorageContextType.d.ts  StorageFile.d.ts  StorageFilter.d.ts  StoragePlugin.d.ts  ThemeContextType.d.ts  WidgetProps.d.ts  markdown.d.ts
playground/src/utils/: constants.tsx  helper_functions.tsx  (+1 more)
public/: index.html  manifest.json
src/: App.css  App.tsx  collatz.rs  comparison.rs  conditional.rs  fibonacci.rs  index.css  index.tsx  lib.rs  main.rs  merkle.rs  range.rs  theme.ts
src/components/: ActionButton.tsx  DropDown.tsx  Link.tsx
static/css/: main.5112c18a.css  main.5112c18a.css.map  main.b41fdbd7.css  main.b41fdbd7.css.map
static/js/: 723.1b69e1c5.chunk.js  723.1b69e1c5.chunk.js.map  723.31ab5119.chunk.js  723.31ab5119.chunk.js.map  723.7c694dea.chunk.js  723.7c694dea.chunk.js.map  723.83b6c6b8.chunk.js  723.83b6c6b8.chunk.js.map  723.9cea8772.chunk.js  723.9cea8772.chunk.js.map  723.9daaa09e.chunk.js  723.9daaa09e.chunk.js.map  723.a4453167.chunk.js  723.a4453167.chunk.js.map  723.ceb26e8f.chunk.js  723.ceb26e8f.chunk.js.map  main.02cd7617.js  main.25a5ee6e.js  main.289fc587.js  main.32cd8e2f.js  main.36c80f92.js  main.36c80f92.js.LICENSE.txt  main.3df14fc5.js  main.6f9c412d.js  main.7359498d.js  main.7aceb315.js  main.82639ac1.js  main.8e741666.js  main.9f262371.js  main.c8fcc0ca.js  main.da79c410.js  main.eb4e6c8a.js
static/media/: miden_wasm_bg.059bf3cbbd288f163747.wasm  miden_wasm_bg.0dfde7283bd45a6ad051.wasm  miden_wasm_bg.193397ad55c920ebedfd.wasm  miden_wasm_bg.2ed9d5fa1eb65f51e510.wasm  miden_wasm_bg.42447b1f708f3e781e83.wasm  miden_wasm_bg.56752e1a8d060afef44f.wasm  miden_wasm_bg.8d58637d98cb1a118aef.wasm  miden_wasm_bg.bdb4c124473f27969661.wasm  miden_wasm_bg.be9ff02f3c21415b7898.wasm  miden_wasm_bg.c79b13f46359b2c2a9c7.wasm
(+101 files in other folders)
