[package]
name = "examples"
version = "0.1.0"
description = "Examples of using Miden VM"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/examples"
edition = "2018"

[lib]
bench = false
doctest = false

[[bin]]
name = "miden"
path = "src/main.rs"
bench = false
doctest = false

[features]
concurrent = ["miden/concurrent", "std"]
default = ["std"]
std = ["hex/std", "math/std", "miden/std", "rand-utils", "math/std", "crypto/std"]

[dependencies]
crypto = { package = "winter-crypto", version = "0.4.1", optional = true }
env_logger = { version = "0.9", default-features = false }
hex = { version = "0.4", optional = true }
log = { version = "0.4", default-features = false }
math = { package = "winter-math", version = "0.4.1", default-features = false }
miden = { git = "https://github.com/maticnetwork/miden", rev = "e203f6657cd15d6de45a32d829fd2d850935432d", default-features = false}
rand-utils = { package = "winter-rand-utils", version = "0.4.1", optional = true }
structopt = { version = "0.3", default-features = false }
