[package]
name = "miden-benchmarking-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
hex = { version = "0.4.0", default-features = false }
miden-stdlib = { version = "0.5.0", package = "miden-stdlib", default-features = false }
miden_vm = { version = "0.6.0", package = "miden-vm", features = ["concurrent"]}
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0.48"
