[package]
name = "miden-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { console_error_panic_hook = "0.1.7" }
miden = "0.3"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0.48"
wasm-bindgen = "0.2.78"
wasm-bindgen-test = "0.3.0"
wasm-logger = "0.2.0"
log = "0.4.6"
