[package]
name = "miden-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { console_error_panic_hook = "0.1.7" }
hex = { version = "0.4", default-features = false }
miden_vm = { git="https://github.com/0xPolygonMiden/miden-vm.git", branch="recursive-verification", package = "miden-vm", default-features = false}
miden_stdlib = { git="https://github.com/0xPolygonMiden/miden-vm.git", branch="recursive-verification", package = "miden-stdlib", default-features = false}
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0.48"
wasm-bindgen = "0.2.78"
wasm-logger = "0.2.0"
log = "0.4.6"
