[package]
name = "miden-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
assembly = { package = "miden-assembly", version = "0.9", default-features = false }
hex = { version = "0.4", default-features = false }
miden-air = { package = "miden-air", version = "0.9", default-features = false }
miden-vm = { package = "miden-vm", version = "0.9", default-features = false }
miden-stdlib = { package = "miden-stdlib", version = "0.9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.78"
wasm-logger = "0.2.0"
log = "0.4.6"
